Require tests to run before build and publish

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -5,6 +5,7 @@ on: push
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+    needs: tox_test
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
